LUCENE-2562: Use Map#copyOf(), List#copyOf() and Set#copyOf() instead of Collections#unmodifiableMap(), unmodifiableList() and unmodifiableSet()